# winx-code-agent

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  PLAN.md  README.md  SECURITY.md  WINX_AGENT_PLAN.md  benchmark.sh  rustfmt.toml  winx.sh
.agent/workflows/: bench.md  build.md  check.md  debug.md  docs.md  feature.md  release.md  test.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
benchmarks/: benchmark_suite.sh  mcp_benchmark.py  mcp_tools_benchmark.py
benchmarks/results/: BENCHMARK_20260113_152627.md  BENCHMARK_REPORT.md  fileread_python.json  fileread_rust.json  mcp_tools_20260113_152627.json  memory.json  search_python.json  search_rust.json  shell_python.json  shell_rust.json  startup_winx.json
proptest-regressions/state/: live_terminal.txt
src/: error.rs  errors.rs  http_server.rs  lib.rs  main.rs  sandbox.rs  server.rs  service.rs  types.rs
src/agent/: SENTIENCE.md  behavior.rs  consciousness.rs  identity.rs  memory.rs  mod.rs  pulse.rs  sense.rs
src/bash/: mod.rs  state.rs
src/canvas/: canvas.rs  caps.rs  color.rs  halfblock.rs  kitty.rs  mod.rs  rasterizer.rs  shapes.rs
src/chat/: config.rs  history.rs  mod.rs  session.rs  streaming.rs
src/dashscope/: client.rs  config.rs  mod.rs  models.rs
src/gemini/: client.rs  config.rs  mod.rs  models.rs
src/interactive/: completer.rs  highlighter.rs  i18n.rs  mod.rs  prompt.rs  render.rs  status.rs
src/interactive/tui/: app.rs  mod.rs  terminal.rs  ui.rs
src/learning/: communication.rs  embedding_engine.rs  embeddings.rs  mod.rs  repetitions.rs  session_parser.rs  store.rs  thinking.rs
src/nvidia/: client.rs  config.rs  mod.rs  models.rs  tests.rs
src/nvidia/tools/: code_analysis.rs  mod.rs
src/providers/: claude.rs  mod.rs  nvidia.rs  ollama.rs  openai.rs
src/state/: ansi_codes.rs  bash_state.rs  line_ring.rs  live_terminal.rs  mod.rs  persistence.rs  pty.rs  terminal.rs  terminal.rs_snippet  turn.rs
src/tools/: bash_command.rs  code_analyzer.rs  code_map.rs  command_suggestions.rs  context_save.rs  file_write_or_edit.rs  glob.rs  initialize.rs  learning.rs  mod.rs  multi_file_edit.rs  multi_file_editor.rs  outline.rs  read_files.rs  read_image.rs  references.rs  search_files.rs  undo_edit.rs  winx_chat.rs
src/utils/: alignment.rs  bash_parser.rs  command_safety.rs  display_tree.rs  encoder.rs  error_predictor.rs  file_cache.rs  file_extensions.rs  fuzzy_match.rs  llm_client.rs  memory_system.rs  mmap.rs  mod.rs  mode_prompts.rs  output_compress.rs  path.rs  path_analyzer.rs  path_prob.rs  pattern_analyzer.rs  redact.rs  repo.rs  repo_context.rs  resource_allocator.rs  scratch_file.rs  symbols.rs  syntax.rs  syntax_checker.rs  tolerance.rs  workspace_stats.rs
tests/: bash_command_full_test.rs  bash_command_pty_test.rs  bash_pty_integration_test.rs  bash_pty_regression_test.rs  claude_repl_e2e_test.rs  debug_hash_test.py  file_write_edit_test.rs  full_lifecycle_test.rs  integration_tests.rs  live_tui_test.rs  manual_file_write_test.py  multi_file_edit_test.rs  terminal_golden.rs  test_multi_edit.py
tests/integration/: bash_execution_tests.rs  file_operations_tests.rs  mcp_protocol_tests.rs  mod.rs
