[package]
name = "winx-code-agent"
version = "0.1.6"
edition = "2024"
description = "Shell and coding agent for Claude Desktop"
authors = ["Gabriel Maia <gabrielmaialva33@gmail.com>"]

[dependencies]
backoff = "0.4"
# Original MCP SDK - rmcp 0.5.0
rmcp = { version = "0.8", features = ["transport-io", "server"] }
schemars = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File and system operations
home = "0.5"
sha2 = "0.10"
base64 = "0.22"
glob = "0.3"
regex = "1.0"
mime_guess = "2.0"
memmap2 = "0.9"
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }

# Performance and concurrency
rayon = "1.0"
bytes = "1.0"
lazy_static = "1.0"
libc = "0.2"

# Terminal and text processing
vte = "0.15"

# Random number generation
rand = "0.9"

# NLP processing
tokenizers = "0.22"

# HTTP client for NVIDIA API integration
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
criterion = { version = "0.7.0", features = ["html_reports"] }
