[package]
name = "winx-code-agent"
version = "0.2.3"
edition = "2021"
rust-version = "1.75"
description = "High-performance Rust implementation of WCGW for LLM code agents"
authors = ["Gabriel Maia <gabrielmaialva33@gmail.com>"]
license = "MIT"
repository = "https://github.com/gabrielmaialva33/winx-code-agent"
keywords = ["mcp", "llm", "code-agent", "shell", "wcgw"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# MCP SDK - Official Rust SDK for Model Context Protocol
rmcp = { version = "0.12", features = ["transport-io", "server"] }

# Schema generation for MCP tools
schemars = "1.2"

# Async runtime - Tokio is the standard
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Serialization - Serde ecosystem
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling - thiserror for library, anyhow for binary
thiserror = "2.0"
anyhow = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File and system operations
home = "0.5"
directories = "6.0"
sha2 = "0.10"
base64 = "0.22"
glob = "0.3"
regex = "1.11"
mime_guess = "2.0"
memmap2 = "0.9"
tempfile = "3.14"
chrono = { version = "0.4", features = ["serde"] }

# Performance and concurrency
rayon = "1.10"

# HTTP client for LLM API calls (NVIDIA NIM)
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Advanced string matching algorithms
strsim = "0.11"
portable-pty = "0.8"
bytes = "1.9"
lazy_static = "1.5"
libc = "0.2"

# Terminal emulation and text processing
vte = "0.15"

# Random number generation
rand = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Interactive REPL (legacy - reedline mode)
reedline = "0.40"
syntect = { version = "5.2", default-features = false, features = ["parsing", "default-themes", "default-syntaxes", "regex-fancy"] }
nu-ansi-term = "0.50"
textwrap = "0.16"
unicode-width = "0.2"

# TUI Framework (ratatui mode - Claude Code style)
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
throbber-widgets-tui = "0.7"
color-eyre = "0.6"

# UX Enhancements
indicatif = "0.17"
arboard = "3.4"
shellexpand = "3.1.1"
hostname = "0.4.2"
dirs = "6.0.0"

# ML Embeddings (optional, for local inference)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.20", optional = true }
hf-hub = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
rstest = "0.23"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = []

# Local embeddings with Candle (CPU)
embeddings = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]

# Local embeddings with CUDA (RTX 4090)
embeddings-cuda = ["embeddings", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

# Clippy lints for quality
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
# Note: unsafe_code is allowed in specific modules (mmap.rs, bash_state.rs) for I/O operations
# unsafe_code = "deny"  # Re-enable when refactoring complete
# Allow unused code in library - some functions are for public API or future use
dead_code = "allow"
unused = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true
